<resources>
    <string name="app_name">WorkshopApp</string>
    <string name="sign_up">Sign up</string>
    <string name="todo">Sign up page</string>
    <string name="already_Registred">AlreadyRegistred ?<u> Login</u></string>
    <string name="type_your_password">type your password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="type_your_email">type your email</string>
</resources>